--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.15",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.488.0",
     "next": "15.2.3",
+    "nodemailer": "^6.10.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
